# WolfChronicle

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: chunking.py  chunks_repository.py  cli.py  db.py  embeddings.py  ingest.py  main.py  models.py  pdf.py  rag.py  schemas.py  settings.py
migrations/: env.py
migrations/versions/: 0075353ef38a_create_chunks_table.py  24266c1121a5_remove_page_number_from_chunks.py  450f13eab261_add_search_vector_gin_index.py  850127d2a77b_add_embedings_ann_search_index.py  e3112b2632a2_add_search_vector_generated_column_to_.py
