[project]
name = "wolfchronicle"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.2",
    "greenlet>=3.5.3",
    "ipython>=9.15.0",
    "openai>=2.46.0",
    "pgvector>=0.5.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "tiktoken>=0.13.0",
    "uvicorn>=0.51.0",
]
